[metadata]
name = imstr
version = 0.0.12
author = Harry Downing
author_email = harry.downing17@gmail.com
description = A command line tool for converting an image to a string representation
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
project_urls =
  repository = https://github.com/harrydowning/imstr
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
py_modules = imstr
python_requires = >=3.6
install_requires =
  opencv-python
  docopt
